--- a/chats.html
+++ b/chats.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Friends - Kokoa Clone</title>
+        <title>Chats - Kokoa Clone</title>
     </head>
     <body>
         <div class="status-bar">
@@ -24,9 +24,10 @@
         </div>
 
         <header class="screen-header">
-            <h1 class="screen-header__title">Friends</h1>
+            <h1 class="screen-header__title">Chats</h1>
             <div class="screen-header__icons">
                 <span><i class="fas fa-search fa-lg"></i></span>
+                <span><i class="far fa-comment-dots fa=lg"></i></i></span>
                 <span><i class="fas fa-music fa-lg"></i></span>
                 <a href="settings.html">
                     <span><i class="fas fa-cog fa-lg"></i></span>
@@ -34,59 +35,35 @@
             </div>
         </header>
 
-        <a id="friends-display-link">
-            <i class="fas fa-info-circle"></i>
-            Friends' Names Display
-            <i class="fas fa-chevron-right fa-xs"></i>
-        </a>
-
         <main class="main-screen">
-            <div class="user-component">
-                <div class="user-component__column">
-                    <img src="https://avatars.githubusercontent.com/u/74856891?s=96&v=4" class="user-component__avatar user-component__avartar--xl"/>
-                    <div class="user-component__text">
-                        <h4 class="user-component__title">Nicolas</h4>
-                        <!-- <h6 class="user-component__subtitle">Subtitle Demo</h6>     -->               
-                    </div>
-                </div>
-                <div class="user-component__column">
-    
-                </div>
-            </div>
-            <div class="friends-screen__channel">
-                <div class="friends-screen__channel-header">
-                    <span>Channel</span>
-                    <i class="fas fa-chevron-up fa-xs"></i>
-                </div>
+            <a href="chat.html">
                 <div class="user-component">
                     <div class="user-component__column">
-                        <img src="https://avatars.githubusercontent.com/u/74856891?s=96&v=4" class="user-component__avatar user-component__avartar--sm"/>
+                        <img src="https://avatars.githubusercontent.com/u/74856891?s=96&v=4" class="user-component__avatar user-component__avartar"/>
                         <div class="user-component__text">
-                            <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
-                            <!-- <h6 class="user-component__subtitle">Subtitle Demo</h6>     -->               
+                            <h4 class="user-component__title">Nicolas</h4>
+                            <h6 class="user-component__subtitle">Please check my Kokoa account info<h6>              
                         </div>
                     </div>
                     <div class="user-component__column">
-                        <div>
-                            <span>2</span>
-                            <i class="fas fa-chevron-right fa-xs"></i>
-                        </div>
+                        <span class="user-component__time">21:22</span>
+                        <div class="nav__notification nav__noti--number">1</div>
                     </div>
                 </div>
-            </div>
+            </a>
         </main>
 
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav_btn">
                     <a class="nav__link" href="friends.html">
-                        <i class="fas fa-user fa-2x"></i>
+                        <i class="far fa-user fa-2x"></i>
                     </a>
                 </li>
                 <li class="nav_btn">
                     <a class="nav__link" href="chats.html">
                         <span class="nav__notification nav__noti--number nav__noti--absolute">1</span>
-                        <i class="far fa-comment fa-2x"></i>
+                        <i class="fas fa-comment fa-2x"></i>
                     </a>
                 </li>
                 <li class="nav_btn">
