--- a/more.html
+++ b/more.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Friends - Kokoa Clone</title>
+        <title>More - Kokoa Clone</title>
     </head>
     <body>
         <div class="status-bar">
@@ -24,53 +24,75 @@
         </div>
 
         <header class="screen-header">
-            <h1 class="screen-header__title">Friends</h1>
+            <h1 class="screen-header__title">More</h1>
             <div class="screen-header__icons">
                 <span><i class="fas fa-search fa-lg"></i></span>
                 <span><i class="fas fa-music fa-lg"></i></span>
-                <a href="settings.html">
+                <a href="settings.html" class="icons--with--noti">
                     <span><i class="fas fa-cog fa-lg"></i></span>
+                    <span class="nav__notification nav__noti--dot nav__dot--near"></span>
                 </a>
             </div>
         </header>
 
-        <a id="friends-display-link">
-            <i class="fas fa-info-circle"></i>
-            Friends' Names Display
-            <i class="fas fa-chevron-right fa-xs"></i>
-        </a>
-
-        <main class="main-screen">
+        <main class="main-screen more-screen">
             <div class="user-component">
                 <div class="user-component__column">
                     <img src="https://avatars.githubusercontent.com/u/74856891?s=96&v=4" class="user-component__avatar user-component__avartar--xl"/>
                     <div class="user-component__text">
                         <h4 class="user-component__title">Nicolas</h4>
-                        <!-- <h6 class="user-component__subtitle">Subtitle Demo</h6>     -->               
+                        <h6 class="user-component__subtitle">
+                            +82 010-6349-2333
+                            <i class="fas fa-exclamation-circle"></i>
+                        </h6>             
                     </div>
                 </div>
                 <div class="user-component__column">
-    
+                    <i class="far fa-comment-alt fa-2x"></i>
                 </div>
             </div>
-            <div class="friends-screen__channel">
-                <div class="friends-screen__channel-header">
-                    <span>Channel</span>
-                    <i class="fas fa-chevron-up fa-xs"></i>
+
+            <div class="icon-row">
+                <div class="icon-row__icon">
+                    <i class="far fa-calendar-check"></i>
+                    <span>Calender</span>
                 </div>
-                <div class="user-component">
-                    <div class="user-component__column">
-                        <img src="https://avatars.githubusercontent.com/u/74856891?s=96&v=4" class="user-component__avatar user-component__avartar--sm"/>
-                        <div class="user-component__text">
-                            <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
-                            <!-- <h6 class="user-component__subtitle">Subtitle Demo</h6>     -->               
+                <div class="icon-row__icon">
+                    <i class="far fa-folder-open"></i>
+                    <span>Talk Drive</span>
+                </div>
+                <div class="icon-row__icon">
+                    <i class="far fa-smile-wink"></i>
+                    <span>Emoticons</span>
+                </div>
+                <div class="icon-row__icon">
+                    <i class="fas fa-brush"></i>
+                    <span>Themes</span>
+                </div>
+                <div class="icon-row__icon">
+                    <i class="far fa-user-circle"></i>
+                    <span>Account</span>
+                </div>
+                <div class="icon-row__icon">
+                    <i class="far fa-comments"></i>
+                    <span>Openchat</span>
+                </div>
+            </div>
+
+            <div class="more-suggestions">
+                <h4 class="more-suggestion__title">Suggestions</h4>
+                <div class="more-suggestions__icons">
+                    <div class="more-suggestions__icon">
+                        <div class="more-suggestions__icon-image">
+                            <i class="fas fa-quote-right"></i>
                         </div>
+                        <span class="more-suggestions__icon-text">Kokoa Story</span>
                     </div>
-                    <div class="user-component__column">
-                        <div>
-                            <span>2</span>
-                            <i class="fas fa-chevron-right fa-xs"></i>
+                    <div class="more-suggestions__icon">
+                        <div class="more-suggestions__icon-image">
+                            <i class="fas fa-user-friends"></i>
                         </div>
+                        <span class="more-suggestions__icon-text">Kokoa Friends</span>
                     </div>
                 </div>
             </div>
@@ -80,7 +102,7 @@
             <ul class="nav__list">
                 <li class="nav_btn">
                     <a class="nav__link" href="friends.html">
-                        <i class="fas fa-user fa-2x"></i>
+                        <i class="far fa-user fa-2x"></i>
                     </a>
                 </li>
                 <li class="nav_btn">
